fix: add overflow-y: scroll to html tag to stop stupid Chrome from shifting layout whenever it needs to add a scrollbar. Stupid Chrome.

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -16,6 +16,7 @@
 html {
   font-size: 16px;
   margin: 0;
+  overflow-y: scroll;
   padding: 0;
 }
 
@@ -29,7 +30,6 @@ body {
   margin: 0;
   min-height: 100vh;
   min-width: 100%;
-  overflow-y: auto;
   position: relative;
 
   &.menu-open {
